--- a/Book Reading UI/Book Reading UI/bin/Book Reading UI.dll.config
+++ b/Book Reading UI/Book Reading UI/bin/Book Reading UI.dll.config
@@ -30,6 +30,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <connectionStrings>
+    <add name="BookReadingContext" connectionString="server=.; database=BookReading;integrated security=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
