--- a/Book Reading Event BL/Book Reading Event BL.csproj
+++ b/Book Reading Event BL/Book Reading Event BL.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="EventOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserOperation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Book Reading Event DAO\Book Reading Event DAO.csproj">
