--- a/Book Reading Event DAO/Book Reading Event DAO.csproj
+++ b/Book Reading Event DAO/Book Reading Event DAO.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Comment.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Invitation.cs" />
+    <Compile Include="Logging\ILogger.cs" />
+    <Compile Include="Logging\Logger.cs" />
     <Compile Include="Migrations\202002061042257_aakash.cs" />
     <Compile Include="Migrations\202002061042257_aakash.designer.cs">
       <DependentUpon>202002061042257_aakash.cs</DependentUpon>
@@ -65,6 +67,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchoolInterceptorLogging.cs" />
+    <Compile Include="SchoolInterceptorTransientErrors.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
