--- a/Book Reading Event DAO/Book Reading Event DAO.csproj
+++ b/Book Reading Event DAO/Book Reading Event DAO.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\202002061054328_final.designer.cs">
       <DependentUpon>202002061054328_final.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002140543305_test.cs" />
+    <Compile Include="Migrations\202002140543305_test.designer.cs">
+      <DependentUpon>202002140543305_test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchoolInterceptorLogging.cs" />
@@ -81,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002061054328_final.resx">
       <DependentUpon>202002061054328_final.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002140543305_test.resx">
+      <DependentUpon>202002140543305_test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
